--- a/01-Resposive-Navbar/index.html
+++ b/01-Resposive-Navbar/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/ebda1b5b9f.js" crossorigin="anonymous"></script>
-    <title>Responsive Navbar</title>
+    <title>Responsive Navbar Menu</title>
 </head>
 <body>
     <nav class="navbar">
