--- a/03-User-Profile-Card/index.html
+++ b/03-User-Profile-Card/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="social-item linkedin">
                 <i class="fa-brands fa-linkedin-in"></i>
-                <span class="followers">500+</span>
+                <span class="followers">3.2M</span>
                 <span class="followers">Connection</span>
             </div>
             <div class="social-item youtube">
