--- a/06-3D-Buttons/index.html
+++ b/06-3D-Buttons/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/ebda1b5b9f.js" crossorigin="anonymous"></script>
-    <title>3D Buttons</title>
+    <title>3D Buttons Effects</title>
 </head>
 <body>
     <div class="container">
