--- a/16-Card-Hover-Effect/index.html
+++ b/16-Card-Hover-Effect/index.html
@@ -14,7 +14,7 @@
             </div>
             <div class="content">
                 <h2>Keep Smiling</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia recusandae aliquid blanditiis nulla eius voluptate placeat, facere maxime.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia recusandae aliquid blanditiis nulla eius voluptate placeat, facere maxime. Corrupti exercitationem reprehenderit ex! Temporibus molestiae iste cum ipsum accusantium facilis libero.</p>
             </div>
         </div>
 
